[gd_scene load_steps=15 format=3 uid="uid://bqi04w12vyyov"]

[ext_resource type="Script" path="res://weapons/basic_weapon/gun.gd" id="1_2ghu0"]
[ext_resource type="Texture2D" uid="uid://djg721dy751o" path="res://assets/guns_gameassets/PNG/assaultrifle2.png" id="2_rbuid"]
[ext_resource type="Texture2D" uid="uid://dm6ssfcfjpoqm" path="res://models/explosions/Explosions Pack 3 files/Sprites/explosion-h/explosion-h1.png" id="3_wt7ab"]
[ext_resource type="Texture2D" uid="uid://cd3hm8vhxkro" path="res://models/explosions/Explosions Pack 3 files/Sprites/explosion-h/explosion-h2.png" id="4_hn0xp"]
[ext_resource type="Texture2D" uid="uid://cowubpylvk1ev" path="res://models/explosions/Explosions Pack 3 files/Sprites/explosion-h/explosion-h3.png" id="5_cfl6q"]
[ext_resource type="Texture2D" uid="uid://ciqhntxpxknc3" path="res://models/explosions/Explosions Pack 3 files/Sprites/explosion-h/explosion-h4.png" id="6_0dqgt"]
[ext_resource type="Texture2D" uid="uid://ca73ela1e0s6f" path="res://models/explosions/Explosions Pack 3 files/Sprites/explosion-h/explosion-h5.png" id="7_yabbg"]
[ext_resource type="Texture2D" uid="uid://criicn1j4dc73" path="res://models/explosions/Explosions Pack 3 files/Sprites/explosion-h/explosion-h6.png" id="8_8vai8"]
[ext_resource type="Texture2D" uid="uid://cf2umap2pka2w" path="res://models/explosions/Explosions Pack 3 files/Sprites/explosion-h/explosion-h7.png" id="9_itssa"]
[ext_resource type="Script" path="res://stats/weapon_stat_component.gd" id="10_pxu0w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xtuwr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wt7ab")
}, {
"duration": 1.0,
"texture": ExtResource("4_hn0xp")
}, {
"duration": 1.0,
"texture": ExtResource("5_cfl6q")
}, {
"duration": 1.0,
"texture": ExtResource("6_0dqgt")
}, {
"duration": 1.0,
"texture": ExtResource("7_yabbg")
}, {
"duration": 1.0,
"texture": ExtResource("8_8vai8")
}, {
"duration": 1.0,
"texture": ExtResource("9_itssa")
}],
"loop": true,
"name": &"default",
"speed": 50.0
}]

[sub_resource type="Animation" id="Animation_7bt45"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2.38419e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_e0og7"]
resource_name = "recoil"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 2.38419e-07), Vector2(-5, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w8rn5"]
_data = {
"RESET": SubResource("Animation_7bt45"),
"recoil": SubResource("Animation_e0og7")
}

[node name="AssaultRifle" type="Node2D"]
script = ExtResource("1_2ghu0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.0624999, 0.072531)
texture = ExtResource("2_rbuid")

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(11, -1)

[node name="Vfx" type="AnimatedSprite2D" parent="."]
position = Vector2(18, -1)
rotation = 1.5708
scale = Vector2(0.317911, 0.435731)
sprite_frames = SubResource("SpriteFrames_xtuwr")
frame = 1
frame_progress = 0.718845

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w8rn5")
}

[node name="WeaponStatComponent" type="Node" parent="."]
script = ExtResource("10_pxu0w")
base_stats = {
"aoe_damage": 0.0,
"bullet_damage": 5.0,
"bullet_speed": 800.0,
"fire_rate": 0.3,
"piercing_num": 0
}

[connection signal="animation_looped" from="Vfx" to="." method="_on_vfx_animation_looped"]
